[+] Added API endpoints to poll a batch of transactions for a list of accounts.
